Fix glyph effects are overwrapping color box

--- a/public/stylesheets/glyphs.css
+++ b/public/stylesheets/glyphs.css
@@ -766,7 +766,7 @@
   border-radius: 0.5rem;
   border-top-left-radius: 0;
   border-top-right-radius: 0;
-  padding: 0.8rem 0.8rem 0.5rem;
+  padding: 0.8rem 0.8rem 1.8rem;
   position: relative;
 }
 
